# sf-fons-platform

./: .env.sample  .gitignore  Dockerfile_dagster  Dockerfile_user_code  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: build_dagster.yml  build_ecs_scale_lambda.yml  build_lambda_base.yml  build_release.yml  build_trigger_dagster_lambda.yml  dependabot_slack.yml  terraform-plan.yml  test_lambdas.yml
dagster/: .dockerignore  .env.sample  Dockerfile_dagster  Dockerfile_user_code  README.md  dagster.yaml  docker-compose.yaml  pyproject.toml  workspace.yaml
dagster/sync/: README.md  __init__.py  repository.py
dagster/sync/assets/: asset1.py
dagster/sync/jobs/: liia.py  sync_code.py
dagster/sync/ops/: liia.py  ops1.py
docs/: infrastructure.md
docs/SSO/: azure.md
docs/infrastructure-diagrams/: README.md  dagster_infrastructure.yaml  pyproject.toml
infrastructure/: README.md  terragrunt.hcl
infrastructure/common/: ecr.tf  main.tf  terraform.tfstate  variables.tf
infrastructure/core/: ecs.tf
infrastructure/environments/child/: dagster.yaml  ecr.yaml  frontend.yaml  frontend_ec2.yaml  frontend_ec2_no_alb.yaml  network.yaml  s3.yaml  sso.yaml  sso2.yaml  sso2_azure.yaml  vpc.yaml
infrastructure/environments/cloudformation/child/: account.yaml  dagster.yaml  frontend_ec2.yaml  sso2.yaml  sso2_azure.yaml
infrastructure/environments/cloudformation/full/common/: cloudtrail.yaml  cognito_pool_triggers.yaml  datadog_retention.yaml  general_key_access.yaml  scaling.yaml
infrastructure/environments/cloudformation/full/common/Datadog/: README.md  dadadog_log_uploader.yaml  datadog_integration.yaml  datadog_log_uploader_scheduler.yaml  datadog_subscription.yaml
infrastructure/environments/cloudformation/full/common/lambda/assign_group/: README.md  pyproject.toml
infrastructure/environments/cloudformation/full/common/lambda/assign_group/assign_group/: handler.py
infrastructure/environments/cloudformation/full/common/lambda/assign_group/tests/: test_handler.py
infrastructure/environments/cloudformation/full/common/lambda/ecs_scale/: README.md  pyproject.toml
infrastructure/environments/cloudformation/full/common/lambda/ecs_scale/ecs_scale/: handler.py
infrastructure/environments/cloudformation/full/common/lambda/ecs_scale/tests/: test_handler.py
infrastructure/environments/cloudformation/full/common/lambda/ecs_scale_down/: pyproject.toml
infrastructure/environments/cloudformation/full/common/lambda/ecs_scale_down/ecs_scale_down/: handler.py
infrastructure/environments/cloudformation/full/common/lambda/ecs_scale_down/tests/: test_handler.py
infrastructure/environments/cloudformation/full/common/lambda/post_auth/: README.md  pyproject.toml
infrastructure/environments/cloudformation/full/common/lambda/post_auth/post_auth/: handler.py
infrastructure/environments/cloudformation/full/la/: dagster.yaml  frontend_ec2.yaml  s3.yaml  scaling.yaml  sso1.yaml  sso2_azure.yaml  sso2_google.yaml  sso3_userpoolclient.yaml  triggered_job.yaml  vpc.yaml
infrastructure/environments/cloudformation/full/la/lambda/ecs_scale_up/: pyproject.toml
infrastructure/environments/cloudformation/full/la/lambda/trigger_dagster_job/: README.md  pyproject.toml
infrastructure/environments/cloudformation/full/la/lambda/trigger_dagster_job/trigger_dagster_job/: handler.py
infrastructure/environments/cloudformation/full/organisation/: dagster.yaml  frontend_ec2.yaml  s3.yaml  sso1.yaml  sso2_azure.yaml  storage_transfer.yaml  vpc.yaml
infrastructure/environments/cloudformation/full/platform/: dagster.yaml  frontend_ec2.yaml  s3.yaml  sso1.yaml  sso2_azure.yaml
infrastructure/environments/cloudformation/interim/: dagster.yaml  frontend_ec2.yaml  frontend_ec2_interim.yaml  ids.yaml  s3-interim.yaml  sso2_azure.yaml  vpc.yaml
infrastructure/environments/cloudformation/organisation/: dagster.yaml  ecr.yaml  s3.yaml  vpc.yaml
infrastructure/environments/cloudformation/single-interim/: dagster.yaml  environment.sh  s3.yaml  sso1.yaml  vpc.yaml
infrastructure/environments/core/: ecr.yaml
infrastructure/environments/live/: terragrunt.hcl
infrastructure/environments/live/prod/: terragrunt.hcl
infrastructure/environments/organisation/: dagster.yaml  ecr.yaml  s3.yaml  vpc.yaml
infrastructure/environments/terraform/: terragrunt.hcl
infrastructure/environments/terraform/environments/staging/la/: .terraform.lock.hcl  main.tf  terragrunt.hcl  variables.tf
infrastructure/environments/terraform/modules/dagster/: dagster.tf  outputs.tf  variables.tf  vpc.tf
infrastructure/environments/terraform/modules/frontend/: main.tf  variables.tf
infrastructure/environments/terraform/modules/ids/: main.tf  variables.tf
infrastructure/environments/terraform/modules/sso/: main.tf  outputs.tf  variables.tf
infrastructure/environments/terraform/modules/storage/: main.tf  outputs.tf  variables.tf
infrastructure/modules/: .terraform.lock.hcl  alb.tf  cloudwatch.tf  deploy.sh  ecs.tf  iam.tf  main.tf  network.tf  output.tf  rds.tf  variables.tf
(+6 files in other folders)
