[tool.poetry]
name = "sfdata-platform"
version = "0.1.0"
description = ""
authors = ["Matthew Pugh <pughmds@cyram.org>"]
readme = "README.md"
packages = [{include = "sfdata_platform"}]

[tool.poetry.dependencies]
python = "^3.10"
sfdata-stream-parser = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
