[tool.poetry]
name = "infrastructure-diagrams"
version = "0.1.0"
description = "Generates Infrastructure Diagrams for the platform"
authors = ["Matthew Pugh <pughmds@cyram.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "infrastructure_diagrams"}]

[tool.poetry.dependencies]
python = "^3.10"
diagrams = "^0.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
