[tool.poetry]
name = "assign group lambda"
version = "0.1.0"
description = "Assigns user groups to users who log into the system"
authors = ["Matthew Pugh <pughmds@cyram.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.35.67"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
